update to Jackson 3.1.0